# src/api/setting.js
@@ -2,14 +2,14 @@ import request from '@/utils/request'
 
 export function allSettings() {
   return request({
-    url: '/api/Setting/all',
+    url: '/api/Setting/All',
     method: 'get'
   })
 }
 
 export function getSetting(key) {
   return request({
-    url: '/api/Setting/get',
+    url: '/api/Setting/Get',
     method: 'get',
     params: { key }
   })
@@ -17,7 +17,7 @@ export function getSetting(key) {
 
 export function setSetting(key, value) {
   return request({
-    url: '/api/Setting/set',
+    url: '/api/Setting/Set',
     method: 'post',
     params: { key },
     data: value
